# memoryforensic-toolkit

./: CMakeLists.txt  README.md  build.sh  setup.bat
include/: Logger.hpp  behavioral_monitor.hpp  cli_interface.hpp  injection_detector.hpp  memory_scan.hpp  monitoring.hpp  report_generator.hpp  rule_loader.hpp  threat_detection.hpp  yara_detection.hpp
rules/: code_injection.yar  malware_signatures.yar  suspicious_behaviour.yar  vulnerability_patterns.yar
src/: Logger.cpp  behavioral_monitor.cpp  client_interface.cpp  injection_detector.cpp  main.cpp  memory_scan.cpp  monitoring.cpp  report_generator.cpp  rule_loader.cpp  threat_detection.cpp  yara.cpp
tests/: test_memory_scan.cpp  test_threat_detection.cpp  test_yara_detection.cpp
